--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -4005,7 +4005,7 @@ I/O:</property>
                                           <widget class="GtkTable" id="graphics-table">
                                             <property name="visible">True</property>
                                             <property name="border_width">3</property>
-                                            <property name="n_rows">7</property>
+                                            <property name="n_rows">8</property>
                                             <property name="n_columns">2</property>
                                             <property name="column_spacing">8</property>
                                             <child>
@@ -4078,8 +4078,8 @@ I/O:</property>
                                                 <property name="use_underline">True</property>
                                               </widget>
                                               <packing>
-                                                <property name="top_attach">5</property>
-                                                <property name="bottom_attach">6</property>
+                                                <property name="top_attach">6</property>
+                                                <property name="bottom_attach">7</property>
                                                 <property name="x_options">GTK_FILL</property>
                                                 <property name="y_options"></property>
                                               </packing>
@@ -4094,8 +4094,8 @@ I/O:</property>
                                                 <property name="mnemonic_widget">gfx-keymap-combo</property>
                                               </widget>
                                               <packing>
-                                                <property name="top_attach">6</property>
-                                                <property name="bottom_attach">7</property>
+                                                <property name="top_attach">7</property>
+                                                <property name="bottom_attach">8</property>
                                                 <property name="x_options">GTK_FILL</property>
                                                 <property name="y_options"></property>
                                               </packing>
@@ -4126,8 +4126,8 @@ I/O:</property>
                                               <packing>
                                                 <property name="left_attach">1</property>
                                                 <property name="right_attach">2</property>
-                                                <property name="top_attach">6</property>
-                                                <property name="bottom_attach">7</property>
+                                                <property name="top_attach">7</property>
+                                                <property name="bottom_attach">8</property>
                                                 <property name="x_options">GTK_FILL</property>
                                                 <property name="y_options"></property>
                                               </packing>
@@ -4213,8 +4213,8 @@ I/O:</property>
                                               <packing>
                                                 <property name="left_attach">1</property>
                                                 <property name="right_attach">2</property>
-                                                <property name="top_attach">5</property>
-                                                <property name="bottom_attach">6</property>
+                                                <property name="top_attach">6</property>
+                                                <property name="bottom_attach">7</property>
                                                 <property name="x_options">GTK_FILL</property>
                                               </packing>
                                             </child>
@@ -4225,6 +4225,33 @@ I/O:</property>
                                                 <property name="label" translatable="yes">Type:</property>
                                               </widget>
                                               <packing>
+                                                <property name="x_options">GTK_FILL</property>
+                                              </packing>
+                                            </child>
+                                            <child>
+                                              <widget class="GtkLabel" id="gfx-tlsport-title">
+                                                <property name="visible">True</property>
+                                                <property name="xalign">1</property>
+                                                <property name="ypad">2</property>
+                                                <property name="label" translatable="yes">TLS Port:</property>
+                                              </widget>
+                                              <packing>
+                                                <property name="top_attach">5</property>
+                                                <property name="bottom_attach">6</property>
+                                                <property name="x_options">GTK_FILL</property>
+                                              </packing>
+                                            </child>
+                                            <child>
+                                              <widget class="GtkLabel" id="gfx-tlsport">
+                                                <property name="visible">True</property>
+                                                <property name="xalign">0</property>
+                                                <property name="label">label</property>
+                                              </widget>
+                                              <packing>
+                                                <property name="left_attach">1</property>
+                                                <property name="right_attach">2</property>
+                                                <property name="top_attach">5</property>
+                                                <property name="bottom_attach">6</property>
                                                 <property name="x_options">GTK_FILL</property>
                                               </packing>
                                             </child>
