--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -1427,33 +1427,6 @@
                                             <property name="column_spacing">6</property>
                                             <property name="row_spacing">6</property>
                                             <child>
-                                              <widget class="GtkHBox" id="hbox3">
-                                                <property name="visible">True</property>
-                                                <property name="spacing">6</property>
-                                                <child>
-                                                  <widget class="GtkComboBox" id="security-model">
-                                                    <property name="visible">True</property>
-                                                    <property name="items" translatable="yes"></property>
-                                                    <signal name="changed" handler="on_security_model_changed"/>
-                                                  </widget>
-                                                  <packing>
-                                                    <property name="expand">False</property>
-                                                    <property name="fill">False</property>
-                                                    <property name="position">0</property>
-                                                  </packing>
-                                                </child>
-                                                <child>
-                                                  <placeholder/>
-                                                </child>
-                                              </widget>
-                                              <packing>
-                                                <property name="left_attach">1</property>
-                                                <property name="right_attach">2</property>
-                                                <property name="x_options">GTK_FILL</property>
-                                                <property name="y_options"></property>
-                                              </packing>
-                                            </child>
-                                            <child>
                                               <widget class="GtkTable" id="security-type-box">
                                                 <property name="visible">True</property>
                                                 <property name="n_rows">3</property>
@@ -1486,6 +1459,7 @@
                                                     <child>
                                                       <widget class="GtkEntry" id="security-label">
                                                         <property name="visible">True</property>
+                                                        <property name="sensitive">False</property>
                                                         <property name="can_focus">True</property>
                                                         <property name="invisible_char">●</property>
                                                         <signal name="changed" handler="on_security_label_changed"/>
@@ -1595,6 +1569,18 @@
                                                 <property name="top_attach">1</property>
                                                 <property name="bottom_attach">2</property>
                                                 <property name="x_options">GTK_FILL</property>
+                                                <property name="y_options">GTK_FILL</property>
+                                              </packing>
+                                            </child>
+                                            <child>
+                                              <widget class="GtkLabel" id="security-model">
+                                                <property name="visible">True</property>
+                                                <property name="xalign">0</property>
+                                                <property name="label">label</property>
+                                              </widget>
+                                              <packing>
+                                                <property name="left_attach">1</property>
+                                                <property name="right_attach">2</property>
                                                 <property name="y_options">GTK_FILL</property>
                                               </packing>
                                             </child>
