--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -2519,6 +2519,7 @@ I/O:</property>
                                                 </child>
                                                 <child>
                                                   <widget class="GtkScrolledWindow" id="scrolledwindow1">
+                                                    <property name="height_request">100</property>
                                                     <property name="visible">True</property>
                                                     <property name="can_focus">True</property>
                                                     <property name="hscrollbar_policy">automatic</property>
@@ -2556,7 +2557,6 @@ I/O:</property>
                                     </child>
                                   </widget>
                                   <packing>
-                                    <property name="expand">False</property>
                                     <property name="position">3</property>
                                   </packing>
                                 </child>
