details: Remove 'Current Allocation' memory label
Just use the 'Change allocation' spin box for reporting and changing.

--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -2593,26 +2593,15 @@ I/O:</property>
                                           <widget class="GtkTable" id="table6">
                                             <property name="visible">True</property>
                                             <property name="border_width">3</property>
-                                            <property name="n_rows">4</property>
+                                            <property name="n_rows">3</property>
                                             <property name="n_columns">2</property>
                                             <property name="column_spacing">6</property>
                                             <property name="row_spacing">6</property>
                                             <child>
-                                              <widget class="GtkLabel" id="label309">
-                                                <property name="visible">True</property>
-                                                <property name="xalign">1</property>
-                                                <property name="label" translatable="yes">Current allocation:</property>
-                                              </widget>
-                                              <packing>
-                                                <property name="x_options">GTK_FILL</property>
-                                                <property name="y_options"></property>
-                                              </packing>
-                                            </child>
-                                            <child>
                                               <widget class="GtkLabel" id="label60">
                                                 <property name="visible">True</property>
                                                 <property name="xalign">1</property>
-                                                <property name="label" translatable="yes">Change a_llocation:</property>
+                                                <property name="label" translatable="yes">Current a_llocation:</property>
                                                 <property name="use_underline">True</property>
                                                 <property name="mnemonic_widget">config-memory</property>
                                               </widget>
@@ -2645,8 +2634,6 @@ I/O:</property>
                                                 <property name="label" translatable="yes">Total host memory:</property>
                                               </widget>
                                               <packing>
-                                                <property name="top_attach">3</property>
-                                                <property name="bottom_attach">4</property>
                                                 <property name="x_options">GTK_FILL</property>
                                                 <property name="y_options"></property>
                                               </packing>
@@ -2656,22 +2643,6 @@ I/O:</property>
                                                 <property name="visible">True</property>
                                                 <property name="xalign">0</property>
                                                 <property name="label">2 GB</property>
-                                                <property name="selectable">True</property>
-                                              </widget>
-                                              <packing>
-                                                <property name="left_attach">1</property>
-                                                <property name="right_attach">2</property>
-                                                <property name="top_attach">3</property>
-                                                <property name="bottom_attach">4</property>
-                                                <property name="x_options">GTK_FILL</property>
-                                                <property name="y_options"></property>
-                                              </packing>
-                                            </child>
-                                            <child>
-                                              <widget class="GtkLabel" id="state-vm-memory">
-                                                <property name="visible">True</property>
-                                                <property name="xalign">0</property>
-                                                <property name="label">200 MB</property>
                                                 <property name="selectable">True</property>
                                               </widget>
                                               <packing>
