details: Apply default VCPU pinning changes to running VM

--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -2394,7 +2394,7 @@ I/O:</property>
                                                   <widget class="GtkLabel" id="label336">
                                                     <property name="visible">True</property>
                                                     <property name="xalign">1</property>
-                                                    <property name="label" translatable="yes">Initial _pinning:</property>
+                                                    <property name="label" translatable="yes">Default _pinning:</property>
                                                     <property name="use_underline">True</property>
                                                     <property name="mnemonic_widget">config-vcpupin</property>
                                                   </widget>
