details: Don't mark tab labels as translatable (they are never shown)

--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -1608,7 +1608,7 @@
                             <child>
                               <widget class="GtkLabel" id="label10">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">over</property>
+                                <property name="label">over</property>
                               </widget>
                               <packing>
                                 <property name="tab_fill">False</property>
@@ -1797,7 +1797,7 @@ I/O:</property>
                             <child>
                               <widget class="GtkLabel" id="label7">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">stat</property>
+                                <property name="label">stat</property>
                               </widget>
                               <packing>
                                 <property name="position">1</property>
@@ -2568,7 +2568,7 @@ I/O:</property>
                             <child>
                               <widget class="GtkLabel" id="label53">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">cpu</property>
+                                <property name="label">cpu</property>
                               </widget>
                               <packing>
                                 <property name="position">2</property>
@@ -2765,7 +2765,7 @@ I/O:</property>
                             <child>
                               <widget class="GtkLabel" id="label54">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">mem</property>
+                                <property name="label">mem</property>
                               </widget>
                               <packing>
                                 <property name="position">3</property>
@@ -3143,7 +3143,7 @@ I/O:</property>
                             <child>
                               <widget class="GtkLabel" id="boot-options-lbl">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">boot</property>
+                                <property name="label">boot</property>
                               </widget>
                               <packing>
                                 <property name="position">4</property>
@@ -3608,7 +3608,7 @@ I/O:</property>
                             <child>
                               <widget class="GtkLabel" id="label55">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">dsk</property>
+                                <property name="label">dsk</property>
                               </widget>
                               <packing>
                                 <property name="position">5</property>
@@ -3769,7 +3769,7 @@ I/O:</property>
                             <child>
                               <widget class="GtkLabel" id="label56">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">net</property>
+                                <property name="label">net</property>
                               </widget>
                               <packing>
                                 <property name="position">6</property>
@@ -3928,7 +3928,7 @@ I/O:</property>
                             <child>
                               <widget class="GtkLabel" id="label401">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">inp</property>
+                                <property name="label">inp</property>
                               </widget>
                               <packing>
                                 <property name="position">7</property>
@@ -4331,7 +4331,7 @@ I/O:</property>
                             <child>
                               <widget class="GtkLabel" id="label440">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">snd</property>
+                                <property name="label">snd</property>
                               </widget>
                               <packing>
                                 <property name="position">9</property>
@@ -4441,7 +4441,7 @@ I/O:</property>
                             <child>
                               <widget class="GtkLabel" id="label501">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">chr</property>
+                                <property name="label">chr</property>
                               </widget>
                               <packing>
                                 <property name="position">10</property>
@@ -4677,7 +4677,7 @@ I/O:</property>
                             <child>
                               <widget class="GtkLabel" id="label15">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">vid</property>
+                                <property name="label">vid</property>
                               </widget>
                               <packing>
                                 <property name="position">12</property>
@@ -4894,7 +4894,7 @@ I/O:</property>
                             <child>
                               <widget class="GtkLabel" id="label47">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">cntrl</property>
+                                <property name="label">cntrl</property>
                               </widget>
                               <packing>
                                 <property name="position">14</property>
